Updated deprecated Base64 API for Java 9.